--- a/styles/style.menu.css
+++ b/styles/style.menu.css
@@ -1,5 +1,9 @@
 .menu {
-    color: azure;
+    
     background-color: rgb(75, 75, 75);
     display: flex;
+}
+.menu a {
+    text-decoration: none;
+    color: azure;
 }
