--- a/styles/style.inscription.css
+++ b/styles/style.inscription.css
@@ -1,4 +1,5 @@
 .inscription {
+    margin: 0.5em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -14,7 +15,7 @@
     color: rgb(61, 82, 83);
 }
 .inscription input{
-    width: 100%;
+    width: 95%;
     margin: 0.3em;
 }
 .inscription button{
