--- a/styles/style.calc.css
+++ b/styles/style.calc.css
@@ -1,5 +1,13 @@
 .calcWrapper{
     background-color: rgb(211, 170, 93);
     width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-.
+.line {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    color: rgb(37, 37, 37);
+}
